--- a/css/phone.css
+++ b/css/phone.css
@@ -373,7 +373,7 @@ body {
   width: 80%;
   padding-bottom: 14px;
   background: #fff;
-  border-radius: 9px;
+  border-radius: 10px;
   -webkit-transform: translateY(-50%);
 }
 #sign .signBox .title {
@@ -396,6 +396,8 @@ body {
   -webkit-transform: translateY(-50%);
 }
 #sign .signBox .inputBox {
+  position: relative;
+  height: 30px;
   margin-top: 10px;
 }
 #sign .signBox .inputBox input[type="text"] {
@@ -415,6 +417,10 @@ body {
   color: #cccccc;
 }
 #sign .signBox .inputBox select {
+  position: absolute;
+  left: 13%;
+  top: 0;
+  z-index: 10;
   display: block;
   width: 74%;
   height: 30px;
@@ -423,10 +429,22 @@ body {
   color: #cccccc;
   border: 1px solid #ddd;
   border-radius: 25px;
-  background: #fff;
+  background: transparent;
   padding: 0 10px;
   box-sizing: border-box;
   outline: none;
+  -webkit-appearance: none;
+}
+#sign .signBox .inputBox select option {
+  background: #fff;
+}
+#sign .signBox .inputBox .icon {
+  position: absolute;
+  right: 15%;
+  top: 5px;
+  z-index: 5;
+  color: #666;
+  font-size: 22px;
 }
 #sign .signBox .inputBox .active {
   color: #333;
@@ -445,6 +463,7 @@ body {
   left: 0;
   top: 0;
   z-index: 99;
+  display: none;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.7);
